Fix layout issues

--- a/assets/css/patientHeader.css
+++ b/assets/css/patientHeader.css
@@ -72,5 +72,6 @@
 @media screen and (max-width: 604px) {
   .identifiers-number {
     flex-wrap: wrap;
+    width: min-content;
   }
 }
